--- a/chatbox.html
+++ b/chatbox.html
@@ -5,8 +5,6 @@
 	<ul id="boxchat"></ul>
 </body>
 <script type="text/javascript">
-	// quochuydev
-	
 	let EventBus = EventBusFactory();
 
 	EventBus.on('SEND', (event)=>{
@@ -15,8 +13,8 @@
 	})
 
 	function appendMessage(message){
-		var node = document.createElement("li");
-		var textnode = document.createTextNode(message);
+		let node = document.createElement("li");
+		let textnode = document.createTextNode(message);
 		node.appendChild(textnode);    
 		document.getElementById("boxchat").appendChild(node);
 	}
